--- a/blog.html
+++ b/blog.html
@@ -1,10 +1,10 @@
 ---
 layout: page
-title : Archive
-header : Post Archive
+title : Blog
+header : Posts
 group: navigation
 ---
 {% include JB/setup %}
 
 {% assign posts_collate = site.posts %}
-{% include JB/posts_collate %}
+{% include FRNK/posts_collate %}
